# SmoothZoom

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  deploy.ps1  deploy_log.txt  plan.md  smoothzoom-code-review-prompt.md  smoothzoom-fix-pass-prompt.md
.claude/: settings.local.json
.claude/rules/: input-hooks.md  mag-bridge.md  project-constraints.md  render-loop.md
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Phase0Harness.vcxproj  Phase0Harness.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SmoothZoom.slnx  SmoothZoom.vcxproj  SmoothZoom.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  smoothzoom_input.vcxproj  smoothzoom_input.vcxproj.filters  smoothzoom_logic.vcxproj  smoothzoom_logic.vcxproj.filters  smoothzoom_output.vcxproj  smoothzoom_output.vcxproj.filters  smoothzoom_support.vcxproj  smoothzoom_support.vcxproj.filters  smoothzoom_tests.vcxproj  smoothzoom_tests.vcxproj.filters
docs/: 01_Project_Scope_and_Non-Scope.md  02_Behavior_Specification.md  03_Technical_Architecture.md  04_Phased_Delivery_Plan.md  05_Technical_Risks_and_Mitigations.md  07_v1.0_Release_Verification_PRD.md  hardware-accommodation-handoff.md  input-interop-handoff.md  manual_test_checklist.md  manual_test_checklist_v2.md  research.md  smoothzoom-code-review-report.md  smoothzoom-shift-scroll-fix-prompt.md
docs/archive/: manual_test_checklist_v1.md  plan_phase6_multimonitor_focusmonitor.md
include/smoothzoom/common/: AppMessages.h  LockFreeQueue.h  RectValidation.h  SeqLock.h  SharedState.h  Types.h
include/smoothzoom/input/: CaretMonitor.h  FocusMonitor.h  InputInterceptor.h  ModifierUtils.h  ScrollNormalizer.h  WinKeyManager.h
include/smoothzoom/logic/: RenderLoop.h  ViewportTracker.h  ZoomController.h
include/smoothzoom/output/: MagBridge.h
include/smoothzoom/support/: Logger.h  SettingsManager.h  TrayUI.h
installer/: SmoothZoom.iss  export-cert.ps1
migrate/: README.txt  install.ps1
res/: SmoothZoom.manifest  SmoothZoom.rc
scripts/: _signing-common.ps1  build.bat  create-shortcut.ps1  deploy-machinestore.ps1  deploy.ps1  dev_sign_setup.ps1  install-secure.ps1  sign-binary.ps1
src/app/: main.cpp  phase0_harness.cpp
src/common/: LockFreeQueue.cpp  SeqLock.cpp  SharedState.cpp
src/input/: CaretMonitor.cpp  FocusMonitor.cpp  InputInterceptor.cpp  WinKeyManager.cpp
src/logic/: RenderLoop.cpp  ViewportTracker.cpp  ZoomController.cpp
src/output/: MagBridge.cpp
src/support/: SettingsManager.cpp  TrayUI.cpp
tests/unit/: test_ModifierUtils.cpp  test_RectValidation.cpp  test_ScrollNormalizer.cpp  test_SeqLock.cpp  test_SettingsManager.cpp  test_ViewportTracker.cpp  test_WinKeyManager.cpp  test_ZoomController.cpp  test_main.cpp
